--- a/scss/pages/_story.scss
+++ b/scss/pages/_story.scss
@@ -34,8 +34,8 @@
 
         &--5 {
             background-image: url("../img/image-6-alt.png");
-            background-size: contain;
-            margin-top: 2rem;
+            background-size: 80%;
+            margin-top: 5rem;
         }
 
         &--6 {
